syntax = "proto3";

package darmok.protobuf;

import "math.proto";

message Light {
    enum ShadowType {
        NoShadow = 0;
        HardShadow = 1;
        SoftShadow = 2;
    };
}

message PointLight {
    float intensity = 1;
    Color3 color = 2;
    float range = 3;
    Light.ShadowType shadow_type = 4;
}

message SpotLight {
    float intensity = 1;
    Color3 color = 2;
    float range = 3;
    float inner_cone_angle = 4;
    float cone_angle = 5;
    Light.ShadowType shadow_type = 6;
}

message DirectionalLight {
    float intensity = 1;
    Color3 color = 2;
    Light.ShadowType shadow_type = 3;
}

message AmbientLight {
    float intensity = 1;
    Color3 color = 2;
}