syntax = "proto3";

package darmok.protobuf;

import "google/protobuf/any.proto";
import "registry.proto";
import "math.proto";
import "asset.proto";

message Renderable {
    string mesh_path = 1;
    string material_path = 2;
}

message Transform {
    Mat4 matrix = 1;
    optional uint32 parent = 2;
    string name = 3;
}

message Camera {
    Mat4 projection = 1;
}

message Scene {
    string name = 1;
    map<uint32, google.protobuf.Any> scene_components = 2;
    Registry registry = 3;
    AssetPack assets = 4;
}